# google-forms-mcp

./: .gitignore  README.md  google_forms_client.py  mcp_instance.py  pyproject.toml  requirements.txt  server.py
tools/: apply_questions_patch.py  close_form.py  get_form.py  google_forms_client.py  list_forms.py  upsert_form.py
